// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ModalLogin should renders correctly with bitBucket props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 1334,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "width": 750,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#00000040",
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "position": "absolute",
          },
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderColor": "gray",
          "borderRadius": 6,
          "borderWidth": 2,
          "justifyContent": "center",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "transform": Array [
            Object {
              "translateY": 100,
            },
          ],
          "width": 600,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#205081",
                "fontSize": 50,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "paddingBottom": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 15,
            },
          ]
        }
      >
        Usuário ou Email
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "gray",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 18,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "paddingBottom": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 15,
            },
          ]
        }
      >
        Senha
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "gray",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 18,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2ebc4f",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 20,
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 40,
              "paddingRight": 40,
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "paddingLeft": 15,
                },
              ]
            }
          >
            Entrar
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Render ModalLogin should renders correctly with gitHub props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 1334,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "width": 750,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#00000040",
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Array [
        Array [
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "position": "absolute",
          },
        ],
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderColor": "gray",
          "borderRadius": 6,
          "borderWidth": 2,
          "justifyContent": "center",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
          "transform": Array [
            Object {
              "translateY": 100,
            },
          ],
          "width": 600,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#333",
                "fontSize": 50,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "paddingBottom": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 15,
            },
          ]
        }
      >
        Usuário ou Email
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "gray",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 18,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "paddingBottom": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 15,
            },
          ]
        }
      >
        Senha
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "borderColor": "gray",
              "borderRadius": 3,
              "borderWidth": 1,
              "fontSize": 18,
              "paddingBottom": 10,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 10,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2ebc4f",
              "borderRadius": 4,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 20,
              "opacity": 1,
              "paddingBottom": 10,
              "paddingLeft": 40,
              "paddingRight": 40,
              "paddingTop": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#fff",
                  "fontSize": 18,
                  "fontWeight": "400",
                  "paddingLeft": 15,
                },
              ]
            }
          >
            Entrar
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
